--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.shuhuan.zufeng.app" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -27,6 +27,10 @@
         <activity
             android:name=".GuideActivity"
             android:label="@string/title_activity_guide" >
+        </activity>
+        <activity
+            android:name=".Test1Activity"
+            android:label="@string/title_activity_test_recommend" >
         </activity>
     </application>
 
