--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,23 +50,23 @@ android {
     }
 
     //代表当前工程要发布多少套软件包
-    productFlavors {
-        defaultConfig
-                {
-
-                }
-
-        // 代表一套软件包，这一套也称作发布渠道
-        // 内部可以定制包ID 版本号，变异信息
-        // 如果没有制定的字段则使用  defaultConfig  里的内容
-        baidu {
-            applicationId "com.shuhuan.zufeng.app.baidu"
-            minSdkVersion 9
-            targetSdkVersion 22
-            versionCode 1
-            versionName "1.0"
-        }
-    }
+//    productFlavors {
+//        defaultConfig
+//                {
+//
+//                }
+//
+//        // 代表一套软件包，这一套也称作发布渠道
+//        // 内部可以定制包ID 版本号，变异信息
+//        // 如果没有制定的字段则使用  defaultConfig  里的内容
+//        baidu {
+//            applicationId "com.shuhuan.zufeng.app.baidu"
+//            minSdkVersion 9
+//            targetSdkVersion 22
+//            versionCode 1
+//            versionName "1.0"
+//        }
+//    }
 }
 
 dependencies {
