--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,5 @@ dependencies {
     compile 'com.android.support:support-v4:22.2.0'
     compile 'com.android.support:design:22.2.0'
     compile project(':PullToRefresh')
+    compile project(':Volley')
 }
